--- a/BarberWeb/Views/Clientes/Delete.cshtml
+++ b/BarberWeb/Views/Clientes/Delete.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -57,7 +56,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Remover" class="btn btn-success" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
