--- a/BarberWeb/Views/Funcionarios/Edit.cshtml
+++ b/BarberWeb/Views/Funcionarios/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Funcionario</h4>
 <hr />
@@ -49,7 +49,7 @@
                 <span asp-validation-for="CriadoEm" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-success"/>
             </div>
         </form>
     </div>
