--- a/BarberWeb/Views/Produto/Delete.cshtml
+++ b/BarberWeb/Views/Produto/Delete.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Remover</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Produto</h4>
     <hr />
@@ -39,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProdutoId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Remover" class="btn btn-success" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
