--- a/BarberWeb/Views/Usuario/Login.cshtml
+++ b/BarberWeb/Views/Usuario/Login.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Entrar" class="btn btn-success" />
-                <input type="submit" asp-action="Cadastrar" value="Cadastrar" class="btn btn-success" />
+                <input type="submit" asp-controller="Usuario" asp-action="Cadastrar" value="Cadastrar" class="btn btn-success" />
             </div>
         </form>
     </div>
